--- a/css/main.css
+++ b/css/main.css
@@ -965,7 +965,7 @@ header {
   background-color: #2f303a;
   /* width: 1600px; */
   padding-right: 15px;
-  right: 15px;
+  padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
@@ -973,9 +973,7 @@ header {
 }
 
 .footer-content a {
-  display: block;
   color: #ffffff;
-  margin: 0;
 }
 
 @media screen and (min-width: 768px) {
