--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -748,7 +748,7 @@ section {
   background-color: #2f303a;
   /* width: 1600px; */
   padding-right: 15px;
-  right: 15px;
+  padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
@@ -756,9 +756,7 @@ section {
 }
 
 .footer-content a {
-  display: block;
   color: #ffffff;
-  margin: 0;
 }
 
 @media screen and (min-width: 768px) {
