--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,16 +2,16 @@
   background-color: $bg-color;
   /* width: 1600px; */
   padding-right: 15px;
-  right: 15px;
+  padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
   padding-bottom: 60px;
 }
 .footer-content a {
-  display: block;
+  // display: block;
   color: $primary-bg-color;
-  margin: 0;
+  // margin: 0;
 }
 .footer .container {
   // display: flex;
