--- a/css/main.css
+++ b/css/main.css
@@ -970,6 +970,7 @@ header {
   margin-right: auto;
   padding-top: 60px;
   padding-bottom: 60px;
+  text-align: center;
 }
 
 .footer-content {
@@ -1187,6 +1188,8 @@ header {
   width: 200px;
   padding: 10px 10px 10px 29px;
   margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
   background-color: #2196f3;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
