--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -753,6 +753,7 @@ section {
   margin-right: auto;
   padding-top: 60px;
   padding-bottom: 60px;
+  text-align: center;
 }
 
 .footer-content {
@@ -970,6 +971,8 @@ section {
   width: 200px;
   padding: 10px 10px 10px 29px;
   margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
   background-color: #2196f3;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
