--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,6 +7,8 @@
   margin-right: auto;
   padding-top: 60px;
   padding-bottom: 60px;
+
+  text-align: center;
 }
 // .footer {
 //   display: block;
@@ -184,6 +186,8 @@
   width: 200px;
   padding: 10px 10px 10px 29px;
   margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
 
   background-color: $accent-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
