--- a/css/main.css
+++ b/css/main.css
@@ -941,10 +941,10 @@ header {
 
 .team-container {
   background: #f5f4fa;
-  /* width: 1600px; */
+  max-width: 1600px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .team {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -954,23 +954,59 @@ header {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: 0;
+  }
+}
+
 .team-item {
-  width: 450px;
   padding-bottom: 24px;
+  margin-bottom: 30px;
+  width: 100%;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
 }
 
-.team-item:not(:last-child) {
-  margin-bottom: 30px;
+@media screen and (max-width: 767px) {
+  .team-item:nth-last-child(-n + 1) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team-item {
+    width: calc((100% - 30px) / 2);
+    margin-right: 15px;
+  }
+  .team-item:nth-child(2n) {
+    margin-right: 0;
+  }
+  .team-item:nth-child(n + 3) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-item {
+    padding-bottom: 30px;
+    width: calc((100% - 90px) / 4);
+    margin-right: 30px;
+    margin-bottom: 0;
+  }
+  .team-item:last-child {
+    margin-right: 0;
+  }
 }
 
 .team-title {
   margin-top: 30px;
   margin-bottom: 10px;
-  color: #212121;
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -978,6 +1014,7 @@ header {
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
+  color: #212121;
 }
 
 .team-text {
