--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,43 +1,68 @@
 .team-container {
   background: $btn-color;
-  /* width: 1600px; */
+  max-width: 1600px;
 }
 .team {
-  // display: flex;
-
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
     flex-wrap: wrap;
   }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-right: 0;
+  }
 }
-// .team .item:not(:last-of-type) {
-//   margin-right: 30px;
-// }
 .team-item {
-  width: 450px;
   padding-bottom: 24px;
-  // width: 270px;
-  // padding-bottom: 30px;
+  margin-bottom: 30px;
+  width: 100%;
+
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: $primary-bg-color;
-}
-.team-item:not(:last-child) {
-  margin-bottom: 30px;
+
+  @media screen and (max-width: 767px) {
+    &:nth-last-child(-n + 1) {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 30px) / 2);
+    margin-right: 15px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-child(n + 3) {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 30px;
+    width: calc((100% - 90px) / 4);
+    margin-right: 30px;
+    margin-bottom: 0;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
 .team-title {
   margin-top: 30px;
   margin-bottom: 10px;
 
-  color: $title-text-color;
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+
   text-align: center;
   letter-spacing: 0.03em;
+
+  color: $title-text-color;
 }
 .team-text {
   margin-bottom: 16px;
